--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <script src="stylesheets/semantic/dist/semantic.min.js"></script>
     <!-- End Semantic UI -->
     <link rel="stylesheet" href="./stylesheets/index.css">
+    <script src="./index.js"></script>
   </head>
   <body>
     <header class="ui header">
